--- a/lib/board_nerd_web/templates/layout/app.html.eex
+++ b/lib/board_nerd_web/templates/layout/app.html.eex
@@ -12,7 +12,7 @@
 
  <body>
    <div class="container">
-    <%= render "_nav.html" %>
+    <%= render "_nav.html", assigns %>
 
      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
