--- a/lib/board_nerd_web/templates/user/new.html.eex
+++ b/lib/board_nerd_web/templates/user/new.html.eex
@@ -1,3 +1,5 @@
 <h2>User Signup</h2>
+<br />
+<%= link "Sign Up with Google", to: "/auth/google" %>
 <hr />
 <%= render("form.html", %{user: @user, conn: @conn}) %>
