--- a/lib/board_nerd_web/templates/layout/_nav.html.eex
+++ b/lib/board_nerd_web/templates/layout/_nav.html.eex
@@ -9,6 +9,7 @@
         <li><a href="/logout">Logout</a></li>
       <% else %>
         <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
       <% end %>
     </ul>
   </div>
